--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "mongod:init": "echo \"> mongo\n> use mainDB\n> db.createUser({user:\"api\", pwd:\"M4KgnR32\", roles:[{role:\"readWrite\", db:\"mainDB\"}]})\n> db.respondents.insertOne({satisfaction: 0, rage: 0, fidelity: 0})\"",
     "mongod": "mongod --config mongodb/mongod.conf --auth",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -35,5 +36,18 @@
     "chalk": "^2.4.2",
     "express": "^4.16.4",
     "mongodb": "^3.2.3"
+  },
+  "prettier": {
+    "overrides": [
+      {
+        "files": "*.html?",
+        "options": {
+          "printWidth": 160
+        }
+      }
+    ]
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0"
   }
 }
