--- a/web/webmanifest.json
+++ b/web/webmanifest.json
@@ -8,7 +8,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "/favicon.ico",
+      "src": "favicon.ico",
       "type": "image/ico",
       "sizes": "64x64"
     }
